--- a/test/fixtures/templates.yml
+++ b/test/fixtures/templates.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  image: MyText
+  name: MyFirstTemplate
 
 two:
-  name: MyString
-  image: MyText
+  name: MySecondTemplate
