--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ rvm:
   - "2.3.1"
 script:
   - RAILS_ENV=test bundle exec rake db:test:prepare
-  - RAILS_ENV=test rake
+  - RAILS_ENV=test bundle exec rake
