--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: ruby
 rvm:
   - "2.3.1"
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate db:test:prepare
-  - RAILS_ENV=test bundle exec rake
+  - RAILS_ENV=test bin/rails db:migrate
+  - RAILS_ENV=test bin/rails test
